Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-12
* Bug fixes (see mercurial logs for details)
* Add default search value on forecast
* Remove egenix-mx-base and replace it by python-dateutil

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)

Version 1.2.0 - 2009-08-10
* Initial release