@@ -1,3 +1,7 @@
+* Forecast creates draft moves only on demand
+* Forecast works at warehouse level
+* Allow 'production' as destination
+
 Version 2.0.0 - 2011-04-27
 * Bug fixes (see mercurial logs for details)
 
